--- a/ISoLA16/FT.tex
+++ b/ISoLA16/FT.tex
@@ -42,7 +42,7 @@ fault-tolerant system must not contain a \emph{single point of
 \paragraph{Copilot Approach:} Fault-tolerant RV has been a ongoing
 topic of investigation for the Copilot research group. The avionics
 industry has been migrating away from federated systems toward the use
-of integrated modular avionics that provide fault-tolerance as a
+of integrated modular avionics that provide fault tolerance as a
 service.  The Aeronautical Radio, Incorporated (ARINC)
 653~\cite{ARINC653} compliant RTOS
 provides temporal and spatial partitioning guarantees so applications
