--- a/ISoLA16/observ.tex
+++ b/ISoLA16/observ.tex
@@ -29,7 +29,7 @@ specification  observable?}
   and MOP~\cite{ChenR05} instrument the software and hardware of the
   SUO so that it emits events of interest to the monitor.  While
   attractive from the viewpoint of maximizing state observability, the
-  additional overhead may affect execution time affecting worst case
+  additional overhead may affect  worst case
   execution times and consequently the scheduling; 
   regulatory guidelines may  also require recertification of that system.
   Copilot, and several other RV frameworks~\cite{sampling,Kane15,borzoo}, opt to sacrifice complete
