--- a/ISoLA16/spec.tex
+++ b/ISoLA16/spec.tex
@@ -5,11 +5,11 @@ well as a thorough safety assessment. Safety is a system level
 property so if RV is to provide safety guarantees, then the monitor
 specifications must flow down from the requirements and safety
 analyses.  Indeed, Rushby's study~\cite{rvRushby,RushbyAIAA09}
-demonstrated that a convincing safety case
-for an IA system protected by RV demands evidence that the monitor
-specifications are derived from validated requirements and,  that the monitor specifications should include checks of the
-assumptions on which safe operation of the system rests are indeed
-satisfied.
+demonstrated that a convincing safety case for an IA system protected
+by RV demands evidence that the monitor specifications are derived
+from validated requirements and, that the monitor specifications
+should include checks of the assumptions on which safe operation of
+the system rests are indeed satisfied.
 
 \paragraph{Challenge:} \emph{ Monitor specifications should derive from
   system level requirements and assumptions that have been validated
@@ -29,7 +29,7 @@ may seem reasonable to a mature adult, but formalizing such statements
 can be an open ended problem.
 
 \paragraph{Challenge:} \emph{Precisely formalize safety properties  in
-  a decidable logic.}
+  a  logic.}
 
 \paragraph{Copilot Approach:} We are conducting case studies informed
 by collaborations with colleagues who are developing new concepts that
