--- a/ISoLA16/steer.tex
+++ b/ISoLA16/steer.tex
@@ -18,14 +18,14 @@ factors.  In many domains, the challenge in constructing an assured
 safe steering algorithm may be as difficult as constructing the
 adaptive autonomous algorithm itself.
 
-\paragraph{Challenge:}  \emph{Verifying the correctness and safety of the
-steering performed  from any viable system sate once a specification violation is detected.}
+\paragraph{Challenge:}  \emph{Verify the correctness and safety of the
+steering performed  from any viable system state once a specification violation is detected.}
  
 
 \paragraph{Predictive Monitors:} Applying RV to application domains
 that have strict timing constraints, such as an adaptive control
 system, raises many technical challenges.  It is imperative that the
-monitor detects that the adaptive controller is about to loose
+monitor detects that the adaptive controller is about to lose
 stability in time to switch to a safe controller. In the case of our
 running example, the RV system needs to detect that two aircraft are
 about to lose separation in time for them to take corrective action.
