--- a/ISoLA16/verispec.tex
+++ b/ISoLA16/verispec.tex
@@ -3,7 +3,7 @@
 As RV is applied to  guarantee sophisticated properties, the
 monitor specifications themselves will grow in complexity and may become
 prone to error.  Our experience with a number of case studies
-involving complex monitor properties is that were able to discover
+involving complex monitor properties is that we were able to discover
 many simple theorems that should hold for a correct specification.  Hence applying formal proof tools to the monitors to
 ensure they are correct can safeguard that the last line of
 defense is actually effective. Ideally, specification verification
@@ -67,8 +67,8 @@ horizontal separation criteria are:
 \noindent 
 \paragraph{}A few of the properties proved in PVS involve continuous mathematics
 that remains beyond the capabilities of fully automated tools,
-but combined with testing we have a convincing argument that we got the
-specification correct. 
+but combined with testing we have a convincing argument that the
+specification is correct. 
 
 
 %\begin{lstlisting}[frame=single]
