--- a/ISoLA16/intro.tex
+++ b/ISoLA16/intro.tex
@@ -8,8 +8,8 @@ validation (V\&V) procedures to prevent mishaps. In addition, strict
 licensing requirements are often placed on human operators of many
 safety-critical systems.  In practice, the verification and validation
 of avionics and other safety-critical software systems relies heavily
-on it being predicable and existing regulatory guidance, such as
-DO-178C~\cite{DO178B}, do not have provisions to assure
+on the system  being predictable and existing regulatory guidance, such as
+DO-178C~\cite{DO178B}, does not have provisions to assure
 safety-critical systems that do not exhibit predictable behavior at
 certification.  Yet technological advances are enabling the
 development of increasingly autonomous (IA) cyber-physical systems
