--- a/ISoLA16/intro.tex
+++ b/ISoLA16/intro.tex
@@ -2,13 +2,13 @@
 as aircraft, automobiles, and medical devices are those systems whose
 failure could result in loss of life, significant property damage, or
 damage to the environment~\cite{Knight2002}.  The grave consequences
-of failure have compelled industry and regulatory authorities to adapt
+of failure have compelled industry and regulatory authorities to adopt
 conservative design approaches and exhaustive verification and
 validation (V\&V) procedures to prevent mishaps. In addition, strict
 licensing requirements are often placed on human operators of many
 safety-critical systems.  In practice, the verification and validation
 of avionics and other safety-critical software systems relies heavily
-on the system  being predictable and existing regulatory guidance, such as
+on the system  being predictable; and existing regulatory guidance, such as
 DO-178C~\cite{DO178B}, does not have provisions to assure
 safety-critical systems that do not exhibit predictable behavior at
 certification.  Yet technological advances are enabling the
