--- a/ISoLA16/FT.tex
+++ b/ISoLA16/FT.tex
@@ -59,7 +59,7 @@ other programs running on the same system.
 Systems that need to  be ultrareliable typically must employ redundancy to
 tolerate the most pernicious faults such as a \emph{Byzantine fault}
 (i.e., a fault in which different nodes interpret a single broadcast
-message differently).  There are have been  documented incidents in
+message differently).  There  have been  documented incidents in
 critical avionics  where sensors failed in a Byzantine fashion with
 the potential to affect a vehicle's safety.  The aircraft horizontal separation criteria in
 Section~\ref{sec:req} depends on reliably sensing the position and
