--- a/ISoLA16/observ.tex
+++ b/ISoLA16/observ.tex
@@ -7,7 +7,7 @@ including state data of executing programs, sensor data, as well as
 data that is communicated from other systems.  The systems safety
 properties of cyber-physical systems are often formulated by aerospace
 and automobile engineers that are domain experts, but can have
-varying degrees of understanding of the computing systems so the RV
+varying degrees of understanding of the computing systems, so the RV
 engineer needs to be very proactive in addressing the observability
 issue. In embedded systems, the closed nature of the hardware
 platforms and proprietary  issues can make it impossible to observe the
