--- a/ISoLA16/spec.tex
+++ b/ISoLA16/spec.tex
@@ -2,7 +2,7 @@
 engineering practices as well as regulatory guidelines typically
 mandate safety-critical systems have detailed written requirements as
 well as a thorough safety assessment. Safety is a system level
-property so if RV is to provide safety guarantees, then the monitor
+property, so if RV is to provide safety guarantees, then the monitor
 specifications must flow down from the requirements and safety
 analyses.  Indeed, Rushby's study~\cite{rvRushby,RushbyAIAA09}
 demonstrated that a convincing safety case for an IA system protected
@@ -90,7 +90,7 @@ hor_rr :: Stream Double -> Stream Double -> Stream Double
 hor_rr sx sy= (sqrt $ (normsq2dim sx sy) - (minHorSep * minHorSep)) / (minHorSep)
 
 horizontalCriterionForConflictResolution :: Stream Double -> Stream Double -> Stream Double -> Stream Double -> Stream Double -> Stream Bool
-horizontalCriterionForConflictResolution sx sy e vx vy = ((scalar2dim sx sy vx vy) >= (e * (hor_rr sx sy e vx vy) * (det2dim sx sy vx vy)) ) && ( ((det2dim sx sy vx vy) *e)  <= 0.0)
+horizontalCriterionForConflictResolution sx sy e vx vy = ((scalar2dim sx sy vx vy) >= (e * (hor_rr sx sy) * (det2dim sx sy vx vy)) ) && ( ((det2dim sx sy vx vy) *e)  <= 0.0)
 \end{lstlisting}
 
 Formalizing the assumptions about the reliability of communicating
