Brian's comments taken into consideration

--- a/ISoLA16/FT.tex
+++ b/ISoLA16/FT.tex
@@ -11,7 +11,7 @@ hazards and failure modes~\cite{SAE4761}.  The level of desired
 reliability determines what faults the system must be designed to
 tolerate. If RV is to be the guarantor of safety, then it must at
 least meet the level of reliability demanded of the system as a whole.
-Thus high-assurance RV should  be designed to be
+Thus, high-assurance RV should  be designed to be
 \emph{fault-tolerant}~\cite{butler-faults}, meaning it continues
 to provide its required functionality in the presence of faults.  A
 fault-tolerant system must not contain a \emph{single point of
