--- a/ISoLA16/noninterference.tex
+++ b/ISoLA16/noninterference.tex
@@ -25,7 +25,7 @@ satisfies the property.
 \paragraph{Copilot Approach:}  
 The Copilot research group has yet to develop a general theory of RV 
 noninterference, but we have made a number of design decisions with
-this in mind, for instance, the choice of monitoring system state
+this in mind. For instance, the choice of monitoring system state
 through sampling was a deliberate attempt to minimize interference
 with the SUO. Running monitors in separate partitions on an ARINC 653
 compliant RTOS as discussed in Section~\ref{sec:ft} ensures that any fault
