--- a/ISoLA16/spec.tex
+++ b/ISoLA16/spec.tex
@@ -7,7 +7,7 @@ specifications must flow down from the requirements and safety
 analyses.  Indeed, Rushby's study~\cite{rvRushby,RushbyAIAA09}
 demonstrated that a convincing safety case for an IA system protected
 by RV demands evidence that the monitor specifications are derived
-from validated requirements and, that the monitor specifications
+from validated requirements and that the monitor specifications
 should include checks of the assumptions on which safe operation of
 the system rests are indeed satisfied.
 
@@ -24,7 +24,7 @@ learning, a safety property might be ``do not hit a pedestrian'' or
 ``do not behave erratically'', but what do these statements mean
 precisely?  A more precise statement such as ``maintain five meters
 distance from any object in the vehicle path'' may be more formal, but
-is that what is the expert wanted?  Phrases like ``erratic behavior''
+is that what the expert wanted?  Phrases like ``erratic behavior''
 may seem reasonable to a mature adult, but formalizing such statements
 can be an open ended problem.
 
