--- a/ISoLA16/steer.tex
+++ b/ISoLA16/steer.tex
@@ -8,7 +8,7 @@ as critical to address in future work.
 specification has been violated is one of the most thorny problems in
 high-assurance RV and almost completely application dependent. The
 simplest action is to log the violation for further analysis or raise
-an alarm for humans to intervene, but in many cases the RV system must
+an alarm for humans to intervene, but in many cases, the RV system must
 take proactive steps to preserve safety. For an autonomous robot,
 putting the system into a quiescent state may be a safe default
 operation depending on the operating environment.  In the case of an
@@ -44,7 +44,7 @@ challenge for the RV community.
 has the potential to introduce vulnerabilities that that can be
 exploited by an attacker.  Copilot and many other RV frameworks
 generate monitors that have constant time and constant space execution
-footprints and while this eliminates some common attacks it does not
+footprints and while this eliminates some common attacks, it does not
 provide general protection. Every sensor and unauthenticated message
 may contribute to the attack surface. If an attacker can trick the
 systems into a monitor specification violation, the triggered steering
