--- a/ISoLA16/trace.tex
+++ b/ISoLA16/trace.tex
@@ -3,7 +3,7 @@
 systems development are reflected throughout the lifecycle, many
 guidelines for safety-critical software, such as DO-178C, require
 documentation of traceability from requirements to object
-code. Consequently, to promote the acceptance of high-assurance RV the
+code. Consequently, to promote the acceptance of high-assurance RV, the
 monitor generation frameworks should produce documentation that
 supports traceability from specification to monitor code.
 
