--- a/ISoLA16/intro.tex
+++ b/ISoLA16/intro.tex
@@ -12,7 +12,7 @@ on the system  being predictable; and existing regulatory guidance, such as
 DO-178C~\cite{DO178B}, does not have provisions to assure
 safety-critical systems that do not exhibit predictable behavior at
 certification.  Yet technological advances are enabling the
-development of increasingly autonomous (IA) cyber-physical systems
+development of increasingly autonomous (IA) cyber-physical systems (CPS)
 that modify their behavior in response to the external environment and
 learn from their experience.  While unmanned aircraft systems (UAS)
 and self-driving cars have the potential of transforming society in
@@ -20,7 +20,7 @@ many beneficial ways, they also pose new dangers to public safety. The
 algorithmic methods such as machine learning that enable autonomy lack
 the salient feature of being predictable since the system's behavior
 depends on what it has learned.  Consequently, the problem of assuring
-safety-critical IA is both a barrier to industrial use  as well as a
+safety-critical IA CPS is both a barrier to industrial use  as well as a
 research challenge~\cite{NRC14}.
 
 
@@ -28,15 +28,15 @@ research challenge~\cite{NRC14}.
 detect and respond to property violations at runtime, has the
 potential to enable the safe operation of safety-critical systems that
 are too complex to formally verify or fully test.  Technically
-speaking, an RV monitor takes a logical specification $\phi$ and
+speaking, a RV monitor takes a logical specification $\phi$ and
 execution trace $\tau$ of state information of the system under
-observation (SUO) and decides wheter $\tau$ satisfies $\phi$. The
+observation (SUO) and decides whether $\tau$ satisfies $\phi$. The
 \emph{Simplex Architecture}~\cite{simplex} provides a model
-architectural pattern for RV, where a monitor checks that the
-executing SUO satisfies a specification and if the property is
+architectural pattern for RV,where a monitor checks that the
+executing SUO satisfies a specification and, if the property is
 violated, the RV system will switch control to a more conservative
 component that can be assured using conventional means that
-\emph{steers} the system into a safe state. \emph{High-assurance} RV
+\emph{steers} the system into a safe state.  \emph{High-assurance} RV
 provides an assured level of safety even when the SUO itself cannot be
 verified by conventional means.
 
