--- a/ISoLA16/verispec.tex
+++ b/ISoLA16/verispec.tex
@@ -4,7 +4,7 @@ As RV is applied to  guarantee sophisticated properties, the
 monitor specifications themselves will grow in complexity and may become
 prone to error.  Our experience with a number of case studies
 involving complex monitor properties is that we were able to discover
-many simple theorems that should hold for a correct specification.  Hence applying formal proof tools to the monitors to
+many simple theorems that should hold for a correct specification.  Hence, applying formal proof tools to the monitors to
 ensure they are correct can safeguard that the last line of
 defense is actually effective. Ideally, specification verification
 capabilities should be integrated into the RV framework so engineers
@@ -38,7 +38,7 @@ In the course of the analysis of the separation criteria, a team of
 domain experts used the PVS interactive prover to prove theorems that
 characterize the correctness of the criteria.  We were able to apply
 the Copilot prover using Z3~\cite{DeMoura2008} to prove many of these theorems
-within the Copilot framework. Among the properties proved about the
+within the Copilot framework. Among the properties proven about the
 horizontal separation criteria are:
 
 \resizebox{.9\linewidth}{!}{
@@ -65,9 +65,9 @@ horizontal separation criteria are:
  \vspace{\belowdisplayskip}
 
 \noindent 
-\paragraph{}A few of the properties proved in PVS involve continuous mathematics
+\paragraph{}A few of the properties proven in PVS involve continuous mathematics
 that remains beyond the capabilities of fully automated tools,
-but combined with testing we have a convincing argument that the
+but combined with testing, we have a convincing argument that the
 specification is correct. 
 
 
