--- a/ISoLA16/FT.tex
+++ b/ISoLA16/FT.tex
@@ -35,11 +35,11 @@ fault-tolerant system must not contain a \emph{single point of
  management software. 
 
 
-\paragraph{Challenge:}   \emph{The RV  should not be rendered inoperable by the
- same failure conditions that cause hazards to the SUO.}
+\paragraph{Challenge:}   \emph{Isolating failures so that  RV  should not be rendered inoperable by the
+ same failure conditions that impact the SUO.}
 
 
-\paragraph{Copilot Approach:} Fault-tolerant RV has been a ongoing
+\paragraph{Copilot Approach:} Fault-tolerant RV has been an ongoing
 topic of investigation for the Copilot research group. The avionics
 industry has been migrating away from federated systems toward the use
 of integrated modular avionics that provide fault tolerance as a
