--- a/ISoLA16/intro.tex
+++ b/ISoLA16/intro.tex
@@ -8,8 +8,8 @@ validation (V\&V) procedures to prevent mishaps. In addition, strict
 licensing requirements are often placed on human operators of many
 safety-critical systems.  In practice, the verification and validation
 of avionics and other safety-critical software systems relies heavily
-on the system  being predictable; and existing regulatory guidance, such as
-DO-178C~\cite{DO178B}, does not have provisions to assure
+on system predictability; and existing regulatory guidance, such as
+DO-178C~\cite{DO178B}, do not have provisions to assure
 safety-critical systems that do not exhibit predictable behavior at
 certification.  Yet technological advances are enabling the
 development of increasingly autonomous (IA) cyber-physical systems (CPS)
@@ -18,10 +18,10 @@ learn from their experience.  While unmanned aircraft systems (UAS)
 and self-driving cars have the potential of transforming society in
 many beneficial ways, they also pose new dangers to public safety. The
 algorithmic methods such as machine learning that enable autonomy lack
-the salient feature of being predictable since the system's behavior
+the salient feature of predictability since the system's behavior
 depends on what it has learned.  Consequently, the problem of assuring
-safety-critical IA CPS is both a barrier to industrial use  as well as a
-research challenge~\cite{NRC14}.
+safety-critical IA CPS is both a barrier to industrial use  and a
+significant  research challenge~\cite{NRC14}.
 
 
 \emph{Runtime verification} (RV)~\cite{monitors}, where monitors
