--- a/ISoLA16/observ.tex
+++ b/ISoLA16/observ.tex
@@ -20,8 +20,8 @@ significant obstacle resulting in  delays, frustration, and sometimes
 preventing progress altogether.
 
 
-\paragraph{Challenge:} \emph{Are the state and environmental variables in the
-specification  observable?}  
+\paragraph{Challenge:} \emph{Determining observability of the state and environment variables in the
+specification.}  
 
 
   \paragraph{Copilot Approach:} How a RV framework obtains state data impacts the properties that
