--- a/ISoLA16/steer.tex
+++ b/ISoLA16/steer.tex
@@ -1,4 +1,4 @@
-\section{Additional Challanges }\label{sec:future} 
+\section{Additional Challenges }\label{sec:future} 
 The presentation so far has examined challenges in assured RV that
 have been addressed in our research. In this section, we will
 raise three of the key additional challenges that we have identified
