corrections based on reviews

--- a/ISoLA16/FT.tex
+++ b/ISoLA16/FT.tex
@@ -62,7 +62,7 @@ tolerate the most pernicious faults such as a \emph{Byzantine fault}
 message differently).  There  have been  documented incidents in
 critical avionics  where sensors failed in a Byzantine fashion with
 the potential to affect a vehicle's safety.  The aircraft horizontal separation criteria in
-Section~\ref{sec:req} depends on reliably sensing the position and
+Section~\ref{sec:req} depend on reliably sensing the position and
 velocity of both systems. In earlier work~\cite{pike-isse-13}, we have
  addressed this issue in a case study where a system had
 redundant sensors and Copilot monitors performed Byzantine exchange and 
