--- a/ISoLA16/steer.tex
+++ b/ISoLA16/steer.tex
@@ -41,7 +41,7 @@ challenge for the RV community.
 
 
 \paragraph{Secured RV:} Adding more software or hardware to a system
-has the potential to introduce vulnerabilities that that can be
+has the potential to introduce vulnerabilities that can be
 exploited by an attacker.  Copilot and many other RV frameworks
 generate monitors that have constant time and constant space execution
 footprints and while this eliminates some common attacks, it does not
