--- a/ISoLA16/paper.bib
+++ b/ISoLA16/paper.bib
@@ -2123,7 +2123,7 @@ month={March}
 
 @inproceedings{DeMoura2008,
  author = {De Moura, Leonardo and Bj{\o}rner, Nikolaj},
- title = {Z3: An Efficient SMT Solver},
+ title = {{Z3:} An Efficient {SMT} Solver},
  booktitle = {Proceedings of the Theory and Practice of Software, 14th International Conference on Tools and Algorithms for the Construction and Analysis of Systems},
  series = {TACAS'08/ETAPS'08},
  year = {2008},
