G-A's ENS affiliation added

--- a/ISoLA16/conclusion.tex
+++ b/ISoLA16/conclusion.tex
@@ -18,4 +18,4 @@ solve  many of the issues raised.
 been conducted in collaboration with Dr. Lee Pike (Galois).  Jonathan
 Laurent (ENS Paris)  and Chris Hathhorn (University of Missouri) did
 most of the coding of the {\tt Copilot.Theorem}.   Georges-Axel
-Jaloyan  recently added the new  monitor verification capabilities. 
+Jaloyan (ENS Paris)  recently added the  monitor verification capabilities. 
