--- a/ISoLA16/security.tex
+++ b/ISoLA16/security.tex
@@ -1,4 +1,4 @@
-section{Secure Monitors} \label{sec:secure} 
+\section{Secure Monitors} \label{sec:secure} 
 
 \noindent\fbox{%
     \parbox{\textwidth}{%
