--- a/TutorialAndDevGuide/Tutorial/MonProofs.tex
+++ b/TutorialAndDevGuide/Tutorial/MonProofs.tex
@@ -3,8 +3,8 @@
 In addition to proofs on the soundness of the Copilot compilation process, we
 also support (in the {\tt Copilot.Theorem} module) some automated proving of
 safety properties about Copilot specifications themselves. A proposition is a
-Copilot value of type \lstinline{Prop Existential} or \lstinline{Prop
-Universal}, which can be introduced using \lstinline{exists} and
+Copilot value of type \lstinline{Prop Existential} or \lstinline{Prop Universal},
+ which can be introduced using \lstinline{exists} and
 \lstinline{forall}, respectively. These are functions taking as an argument a
 normal Copilot stream of type \lstinline{Stream Bool}. Propositions can be added
 to a specification using the \lstinline{prop} and \lstinline{theorem} functions,
