--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -289,14 +289,13 @@ Darafsheh, Alwyn Goodloe.
 {
 
 
-\input{preliminaries}
-\input{Domain}
+\input{introduction}
+\input{Interpret}
 \input{Language}
-\input{MonProofs}
 \input{Tools} 
-\input{MajVoteExample} 
+\input{Examples}
 \input{LogicExample} 
-\input{WellClearExample} 
+\input{Advanced}
 \addcontentsline{toc}{section}{References}
 \bibliographystyle{alpha}
 \bibliography{mybib}
